# VenturousCore

./: .gitmodules  CMakeLists.txt  README.md  VenturousCore.kdev4
include/VenturousCore/: AddingItems.hpp  History.hpp  ItemTree-inl.hpp  ItemTree.hpp  MediaPlayer.hpp
src/: AddingItems.cpp  AudaciousMediaPlayer.cpp  History.cpp  ItemTree.cpp
src/MediaPlayer/: MediaPlayer.cpp  PlayerUtilities.hpp
src/MediaPlayer/Audacious/: Audacious.cpp  Audacious.hpp  ConfigureDetachedAudacious.cpp  DetachedAudacious.cpp  DetachedAudacious.hpp  ManagedAudacious.cpp  ManagedAudacious.hpp
